tests/snapshots/cli__help_audit.snap
---
source: tests/cli.rs
expression: "help_output(& [\"audit\", \"--help\"])"
---
Audit the current repo (or the whole org) against lab standards

With no subcommand, audits the current repo and exits 1 on any error-severity finding (--strict promotes warnings to failures). `all` sweeps every repo in the org; `report-github` posts results back to GitHub as a sticky PR comment or deduplicated issues. --format json emits the stable schema the audit bot consumes.

Usage: hpds audit [OPTIONS] [COMMAND]

Commands:
  all            Audit every repo in the GitHub org
  report-github  Post audit results to GitHub (sticky PR comment, dedup'd issues)
  help           Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose
          Show more detail (underlying commands, tool names)

  -q, --quiet
          Suppress all output except errors

      --format <FORMAT>
          Output format
          
          [default: text]
          [possible values: text, json]

      --no-color
          Disable colored output

      --config <PATH>
          Use this config file instead of discovering hpds.toml

      --strict
          Exit 1 on warnings too (they stay warnings in the report)

  -h, --help
          Print help (see a summary with '-h')
