tests/snapshots/cli__help_audit_all.snap
---
source: tests/cli.rs
expression: "help_output(& [\"audit\", \"all\", \"--help\"])"
---
Audit every repo in the GitHub org

Enumerates the org's repos via `gh`, audits each (shallow clone, or a metadata-only pass with --no-clone), and emits a combined report: a terminal summary table plus a per-repo markdown file. A failure on one repo is reported, not fatal.

Usage: hpds audit all [OPTIONS]

Options:
      --org <ORG>
          GitHub organization to sweep
          
          [default: StanfordHPDS]

  -v, --verbose
          Show more detail (underlying commands, tool names)

      --limit <N>
          Audit at most this many repos when enumerating the org
          
          [default: 100]

  -q, --quiet
          Suppress all output except errors

      --no-clone
          Skip cloning: audit GitHub metadata only (runs just the watchers, contributors, stale-remote-branches, and branches-without-pr checks; the other checks need a working tree)

      --no-color
          Disable colored output

      --config <PATH>
          Use this config file instead of discovering hpds.toml

      --repos-from <FILE>
          Audit the repos listed in FILE (one `owner/name` slug or local path per line, `#` comments allowed) instead of enumerating the org

      --output <PATH>
          Write the markdown report to PATH
          
          [default: hpds-audit-report.md]

      --format <FORMAT>
          Output format for the terminal summary
          
          [default: text]
          [possible values: text, json]

  -h, --help
          Print help (see a summary with '-h')
