tests/snapshots/cli__help_audit_report_github.snap
---
source: tests/cli.rs
expression: "help_output(& [\"audit\", \"report-github\", \"--help\"])"
---
Post audit results to GitHub (sticky PR comment, dedup'd issues)

Consumes audit JSON (from `hpds audit --format json`) and mirrors the findings to GitHub via `gh`: a single sticky comment on a pull request, or one deduplicated issue per new error finding on a schedule. Meant to run inside the audit-bot workflow; see docs/audit-bot.md.

Usage: hpds audit report-github [OPTIONS]

Options:
      --input <FILE>
          Audit JSON from `hpds audit --format json` (stdin when omitted)

  -v, --verbose
          Show more detail (underlying commands, tool names)

  -q, --quiet
          Suppress all output except errors

      --repo <OWNER/REPO>
          Repository to report to (default: $GITHUB_REPOSITORY)

      --no-color
          Disable colored output

      --pr <NUMBER>
          Pull request to comment on (default: $GITHUB_REF / event payload)

      --config <PATH>
          Use this config file instead of discovering hpds.toml

      --mode <MODE>
          What to post (default: from $GITHUB_EVENT_NAME)

          Possible values:
          - pr:       Upsert the sticky findings comment on a pull request
          - schedule: File issues for new error findings and close resolved ones

  -h, --help
          Print help (see a summary with '-h')
