tests/snapshots/cli__help_config.snap
---
source: tests/cli.rs
expression: "help_output(& [\"config\", \"--help\"])"
---
Print the resolved configuration and where each value came from

Usage: hpds config [OPTIONS]

Options:
  -v, --verbose        Show more detail (underlying commands, tool names)
  -q, --quiet          Suppress all output except errors
      --no-color       Disable colored output
      --config <PATH>  Use this config file instead of discovering hpds.toml
  -h, --help           Print help
