tests/snapshots/cli__help_git_setup.snap
---
source: tests/cli.rs
expression: "help_output(& [\"git\", \"setup\", \"--help\"])"
---
Configure sensible git defaults and gh auth guidance

Sets init.defaultBranch to main (unless you already chose one), ensures your git user.name and user.email are set (prompting, or from --name/--email), reports your gh authentication state, and offers to vaccinate the global git ignore.

Usage: hpds git setup [OPTIONS]

Options:
      --name <NAME>
          Value for git user.name (skips the prompt; for scripted use)

  -v, --verbose
          Show more detail (underlying commands, tool names)

      --email <EMAIL>
          Value for git user.email (skips the prompt; for scripted use)

  -q, --quiet
          Suppress all output except errors

      --no-color
          Disable colored output

  -y, --yes
          Never prompt: vaccinate the global ignore without asking (identity must then come from --name/--email or existing config)

      --config <PATH>
          Use this config file instead of discovering hpds.toml

  -h, --help
          Print help (see a summary with '-h')
