tests/snapshots/cli__help_git_vaccinate.snap
---
source: tests/cli.rs
expression: "help_output(& [\"git\", \"vaccinate\", \"--help\"])"
---
Add R/Python/editor junk patterns to the global git ignore

Usage: hpds git vaccinate [OPTIONS]

Options:
  -v, --verbose        Show more detail (underlying commands, tool names)
  -q, --quiet          Suppress all output except errors
      --no-color       Disable colored output
      --config <PATH>  Use this config file instead of discovering hpds.toml
  -h, --help           Print help
