tests/snapshots/cli__help_install.snap
---
source: tests/cli.rs
expression: "help_output(& [\"install\", \"--help\"])"
---
Install external software (r, quarto, uv, gh, rig, tinytex, duckdb)

Installs developer tooling onto the machine. Prints exactly what will run and asks for confirmation before changing anything; pass --yes to skip the prompt.

Usage: hpds install [OPTIONS] <TOOL>

Arguments:
  <TOOL>
          Tool to install (r, quarto, uv, gh, rig, tinytex, duckdb)

Options:
  -v, --verbose
          Show more detail (underlying commands, tool names)

      --version <VERSION>
          Install this exact version (only for tools that support pinning)

  -q, --quiet
          Suppress all output except errors

  -y, --yes
          Skip the confirmation prompt; the plan of what will run is still printed first

      --no-color
          Disable colored output

      --config <PATH>
          Use this config file instead of discovering hpds.toml

  -h, --help
          Print help (see a summary with '-h')
